--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,57 +15,63 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: 获取当前版本号
+      - name: Get latest VERSION
         id: get_current_version
         run: |
-          VERSION=$(yq '.version' sherpa-onnx-tts-stt/config.yaml)
+          VERSION=$(yq '.version' config.yaml)
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-      - name: 获取上一个 Release 版本号
+      - name: Get last Release VERSION
         id: get_last_release_version
         run: |
           LAST_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
           LAST_VERSION=$(echo "$LAST_VERSION" | sed 's/^v//')
           echo "LAST_VERSION=$LAST_VERSION" >> $GITHUB_OUTPUT
-      - name: 检查版本号是否变化
+      - name: Check need to release or not
         id: check_version_change
         run: |
           CURRENT_VERSION="${{ steps.get_current_version.outputs.VERSION }}"
           LAST_VERSION="${{ steps.get_last_release_version.outputs.LAST_VERSION }}"
           if [ "$CURRENT_VERSION" != "$LAST_VERSION" ]; then
-            echo "版本号已变化，需要发布 Release"
+            echo "Version Changed Need to Release"
             echo "should_release=true" >> $GITHUB_OUTPUT
           else
-            echo "版本号未变化，无需发布 Release"
+            echo "Version NOT Changed, No Need to Release"
             echo "should_release=false" >> $GITHUB_OUTPUT
           fi
   create_release:
     needs: release
     if: ${{ needs.release.outputs.should_release == 'true' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Needed to allow BobAnkh/auto-generate-changelog to commit CHANGELOG.md
     steps:
-      - uses: actions/checkout@v4
-      - name: 读取版本号 (再次读取，确保最新)
+      - name: Check out
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Check VERSION
         id: get_version
         run: |
-          VERSION=$(yq '.version' sherpa-onnx-tts-stt/config.yaml)
+          VERSION=$(yq '.version' config.yaml)
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-      - name: 生成 Changelog
-        id: changelog_gen
-        uses: github-changelog-generator/github-changelog-generator@v2.5.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          output: temp_changelog.md
-          outputformat: markdown
-      - name: 更新 CHANGELOG.md
-        run: |
-          cat temp_changelog.md sherpa-onnx-tts-stt/CHANGELOG.md > updated_changelog.md
-          mv updated_changelog.md sherpa-onnx-tts-stt/CHANGELOG.md
-          rm temp_changelog.md
-      - name: 创建 Release
+      - name: Generate Release note body.
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.get_version.outputs.VERSION }}
           release_name: Release v${{ steps.get_version.outputs.VERSION }}
-          body: ${{ steps.changelog_gen.outputs.changelog }}
+          body: ${{steps.github_release.outputs.changelog}}
+      - name: Generate CHANGELOG.md
+        uses: BobAnkh/auto-generate-changelog@v1.2.5
+        with:
+          REPO_NAME: ${{ github.repository }}
+          ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          PATH: 'CHANGELOG.md'
+          COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
+          TYPE: 'feat:Feature,fix:Bug Fixes,docs:Documentation,refactor:Refactor,perf:Performance Improvements'
