feat: 新增选项设置STT_BUILTIN_AUTO_CONVERT_NUMBER=True以启用内置STT模型汉字数字一二三到阿拉伯数字123的转换更好适应内置Hass Intent Fix #1

--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,7 @@ options:
     speed: 1.0
     stt_model: sherpa-onnx-paraformer-zh-2023-03-28
     stt_use_int8_onnx_model: True
+    stt_builtin_auto_convert_number: False
     stt_thread_num: 3
     tts_model: matcha-icefall-zh-baker
     tts_thread_num: 3
